# data-quality-starter-kit

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: .gitkeep  customers.json
docs/: demo-case.md  portfolio-demo.md  publication-checklist.md  technical-post-draft.md
docs/demo-output/: validation_report.html
examples/: .gitkeep  customers_valid.csv  customers_with_errors.csv
src/data_quality_starter/: __init__.py  __main__.py  cli.py  config.py  csv_file.py  html_report.py  result.py  validator.py
tests/: test_cli.py  test_config.py  test_html_report.py  test_validation.py
